Implemented HeatMap and code refactoring
