# frontend_ts/src/api/HeatMapResponse.ts
@@ -1,0 +1,9 @@
+export type HeatMapResponse = HeatMapResponseEntry[];
+
+export type HeatMapResponseEntry = {
+    count: number            // Number of counted points at the same coordinates
+    coordinates: {
+        latitude:  number,    // Latitude into the map.
+        longitude: number,    // Longitude into the map.
+    }
+}
